--- a/timeline.html
+++ b/timeline.html
@@ -151,11 +151,11 @@
         }
 
         .event.internal-announcement {
-            background: #1abc9c;
+            background: #018374;
         }
 
         .event.pitching {
-            background: #27ae60;
+            background: #388e3c;
         }
 
         .legend {
@@ -231,7 +231,7 @@
                     <span>Session</span>
                 </div>
                 <div class="legend-item">
-                    <div class="legend-color" style="background: #1abc9c;"></div>
+                    <div class="legend-color" style="background: #018374;"></div>
                     <span>Internal Announcement</span>
                 </div>
                 <div class="legend-item">
@@ -243,7 +243,7 @@
                     <span>Mentorship</span>
                 </div>
                 <div class="legend-item">
-                    <div class="legend-color" style="background: #27ae60;"></div>
+                    <div class="legend-color" style="background: #388e3c;"></div>
                     <span>Pitching</span>
                 </div>
             </div>
