--- a/index.html
+++ b/index.html
@@ -116,12 +116,19 @@
       </div>
 
       <!-- TSYP Teams Tool -->
-      <div class="tool-card" onclick="window.location.href='https://tsyp-teams.onrender.com/'">
+      <div class="tool-card" onclick="window.location.href='https://tsyp-teams-v2.onrender.com/'">
         <div>
-          <img src="https://tsyp-teams.onrender.com/static/img/logo-01.png" alt="" class="tool-icon"
-            style="width: 100px;" />
+          <i class="fas fa-users"></i>
         </div>
         <div class="tool-title">TSYP Teams</div>
+      </div>
+
+      <!-- timeline tool -->
+      <div class="tool-card" onclick="window.location.href='timeline.html'">
+        <div class="tool-icon">
+          <i class="fas fa-calendar-alt"></i>
+        </div>
+        <div class="tool-title">Timeline</div>
       </div>
     </div>
   </div>
