--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
       <!-- TSYP Teams Tool -->
       <div class="tool-card" onclick="window.location.href='https://tsyp-teams-v2.onrender.com/'">
-        <div>
+        <div class="tool-icon">
           <i class="fas fa-users"></i>
         </div>
         <div class="tool-title">TSYP Teams</div>
@@ -128,7 +128,7 @@
         <div class="tool-icon">
           <i class="fas fa-calendar-alt"></i>
         </div>
-        <div class="tool-title">Timeline</div>
+        <div class="tool-title">Herotopia Timeline</div>
       </div>
     </div>
   </div>
